Add contact form, login history tracking, and user role-based system with admin portal

--- a/servicedir-backend copy/servicedir-backend copy/.env
+++ b/servicedir-backend copy/servicedir-backend copy/.env
@@ -1,2 +1,2 @@
 PORT=5001
-MONGO_URI=mongodb+srv://Sumit:Sumit000@cluster0.kn5xjkj.mongodb.net/serviceDirDB?appName=Cluster0
+MONGO_URI=mongodb://localhost:27017/serviceDirDB
