--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "npm --prefix 'service-directory copy/service-directory copy' run build",
-  "outputDirectory": "service-directory copy/service-directory copy/dist"
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
 }
