Add payment integration with Stripe, wallet system, and invoice generation
- Created Payment, Wallet, and Invoice models
- Implemented Stripe payment processing
- Built wallet system with balance tracking and transactions
- Generated PDF invoices after successful payments
- Created PaymentModal component for booking payments
- Built Wallet page for balance management and top-ups
- Created Invoices page for viewing and downloading invoices
- Updated Navbar with Wallet and Invoices links
- Added new routes for payments, wallets, and invoices
- Updated package.json with Stripe, PDFKit, and Nodemailer dependencies

--- a/servicedir-backend copy/servicedir-backend copy/.env
+++ b/servicedir-backend copy/servicedir-backend copy/.env
@@ -1,2 +1,8 @@
 PORT=5001
 MONGO_URI=mongodb://localhost:27017/serviceDirDB
+JWT_SECRET=your_jwt_secret_key_change_this_in_production
+STRIPE_SECRET_KEY=sk_test_YOUR_STRIPE_SECRET_KEY
+STRIPE_PUBLISHABLE_KEY=pk_test_YOUR_STRIPE_PUBLISHABLE_KEY
+PLATFORM_FEE_PERCENTAGE=10
+EMAIL_SERVICE_USER=your_email@gmail.com
+EMAIL_SERVICE_PASSWORD=your_app_password
