--- a/servicedir-backend copy/servicedir-backend copy/package.json
+++ b/servicedir-backend copy/servicedir-backend copy/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^9.0.0"
+    "mongoose": "^9.0.0",
+    "stripe": "^14.10.0",
+    "pdfkit": "^0.13.0",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
